infra/k8s-prod/ingress-srv.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: amashr.com
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: amashr-frontend-srv
              servicePort: 3000
